<resources>
    <string name="app_name">Customer App</string>
    <string name="end_time">Out Time</string>
    <string name="start_time">In Time</string>
    <string name="in_time">In Time</string>
    <string name="out_time">Out Time</string>
    <string name="loading">Loading</string>
    <string name="wait">Please wait</string>
    <string name="map_package">com.google.android.apps.maps</string>
    <string name="maps_navigation">google.navigation:q=</string>
    <string name="maps_mode"><![CDATA[&mode=w&avoid=f]]></string>

    <string name="title_activity_login">Customer App</string>

    <!-- Strings related to login -->
    <string name="login">Login</string>
    <string name="address">Address</string>
    <string name="group">Group &amp; Shift</string>
    <string name="title_activity_maps">Map</string>
    <string name="tap_to_select_your_nodal_pick_up_location">Tap to select your nodal pick up location</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email_id">Email id</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="upload">Upload</string>
    <string name="employee_id">Employee Id</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="alternative_email_id">Alternative Email id</string>
    <string name="set_as_home_address">Select and Save</string>
    <string name="set_as_nodal_point">Select and Save</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="location">Location</string>
    <string name="membership_validity">Membership Validity</string>
    <string name="submit">Submit</string>
    <string name="boarding_pass">Boarding Pass</string>
    <string name="change_password">Change password</string>
    <string name="update_profile">Update Profile</string>
    <string name="group_and_shift">Groups and Shifts</string>
    <string name="connectivity_change">android.net.conn.CONNECTIVITY_CHANGE</string>
    <string name="profile">Profile</string>
    <string name="schedule">Schedule</string>
    <string name="map_fragment">Map Fragment</string>
    <string name="new_account">Don\'t have an account yet, click Register!</string>
    <string name="register">Register</string>
    <string name="select_area">Select Area</string>
    <string name="opt_in_description">Opt-In settings</string>
    <string name="opt_in_opted_in_description">You are now subscribed for transport
services. In case you need to pause the
service for a certain period please click here</string>
    <string name="opt_in_opted_out_description">You are not subscribed for transport
services. In case you wish to avail the
transport service for a certain period
please click here</string>
    <string name="weekdays_off">Weekdays Off</string>
    <string name="landmark">Landmark</string>
    <string name="enter_address_building_no_street_name">Enter Address(Building No/Street name)</string>
    <string name="maharastra">Maharashtra</string>
    <string name="tap_to_book_your_ride">Tap to book your ride</string>
    <string name="no_trip_scheduled">No trip scheduled</string>
    <string name="time_place_holder">--:--</string>
    <string name="holiday_reason">Holiday Reason</string>
    <string name="m">M</string>
    <string name="w">W</string>
    <string name="t">T</string>
    <string name="f">F</string>
    <string name="s">S</string>

    <string name="nodal_address">Nodal Address</string>
    <string name="home_address">Home Address</string>
    <string name="no_group_and_shift_assigned_to_you">No group and Shift Assigned to you</string>
    <string name="shift">Shift</string>
    <string name="you_have_not_selected_your_week_off_days">You have not selected your week off days</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="update">Update</string>
    <string name="dash">---</string>
    <string name="last_updated">Last Updated:</string>
    <string name="eta">ETA:</string>
    <string name="center_map">Center Map</string>
    <string name="official_email">Official Email</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enjoy_your_ride">Enjoy your ride!</string>
    <string name="your_attendance_has_been_marked">Your Attendance has been marked.</string>
    <string name="no_boarding_pass_assigned_to_you">No Boarding pass Assigned to you!</string>
    <string name="scan_qr">Scan QR</string>
    <string name="open_camera">Open Camera</string>
    <string name="sos">SOS</string>
    <string name="track_my_ride">Track My Ride</string>
    <string name="otp">OTP:</string>
    <string name="car">Car</string>
    <string name="rotate">Rotate</string>
    <string name="border">Border</string>
    <string name="open_maps">Open Maps</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="state">State</string>
    <string name="search">Search</string>
    <string name="show_password">Show Password</string>
    <string name="top_logo">Top Logo</string>
    <string name="logout">Logout</string>
    <string name="please_select_any_of_the_nodal_stops_highlighted_in_pink">Please select any of the nodal stops highlighted in pink</string>
    <string name="tap_here_to_search_location">Tap here to search location</string>
    <string name="contract">Contract</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="done">Done</string>
    <string name="loading_title">Loading…</string>
    <string name="refresh">Refresh</string>
    <string name="email">Email</string>
    <string name="cancel_event">Cancel Event</string>
    <string name="cancel">Cancel</string>
    <string name="reason">Reason</string>
    <string name="event_details">Event Details</string>
    <string name="search_home_location">Search Home Location</string>
    <string name="search_for_a_locality_or_landmark">Search for a locality or landmark</string>
    <string name="society">Society</string>
    <string name="street_address">Street Address</string>
    <string name="locality">Locality</string>
    <string name="weekly_off">Weekly Off</string>
    <string name="days">Selected Dates</string>
    <string name="locatopn_error">Unable to fetch address</string>
    <string name="week_off">Weekly Off</string>
    <string name="password">Password</string>
    <string name="back">Back</string>
    <string name="bulk">Bulk</string>
    <string name="right">Right</string>
    <string name="trip_notice">Changes will reflect in trips starting after 24 hours</string>



    <!-- Notification settings string -->
    <string name="channel_name">CityZipCorp</string>
    <string name="content_title">CityZip</string>
    <string name="channel_description">Notification for CityZipCorp</string>

    <!-- Notification strings -->
    <string name="nbp">A new boarding pass has been issued to you. Please see the app for more details.</string>
    <string name="ubp">Your boading pass has been updated</string>
    <string name="am">Your attendance has been marked by the driver</string>
    <string name="opt">You have been opted out from the transport service</string>

</resources>
