<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background_gradient"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:paddingTop="20dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/zin_logo"
            android:contentDescription="@string/top_logo" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="10dp"
            android:fontFamily="@font/roboto_slab"
            android:text="@string/contract"

            android:textColor="@color/white" />


        <Spinner
            android:id="@+id/spn_contract"
            style="@style/Widget.App.Spinner"
            android:layout_width="match_parent"
            android:layout_height="50dp"

            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:background="@color/ninty_percent_transparency_black"
            android:padding="5dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_envelop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="15dp"
                android:background="@drawable/ic_envelope"
                android:contentDescription="@string/email" />


            <EditText
                android:id="@+id/edt_email_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginStart="15dp"
                android:backgroundTint="@color/white"
                android:hint="@string/email_id"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textColorLink="@color/white" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="#FEBE1B"
            android:text="@string/submit"
            android:textColor="@color/black" />

    </LinearLayout>
</ScrollView>

