<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/layout_data"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/layout_in_time"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_time"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/ts_x_regular"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/txt_start_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/time_place_holder"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/ts_large"
                android:textStyle="bold" />
        </LinearLayout>

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@color/divider" />

        <LinearLayout
            android:id="@+id/layout_out_time"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/end_time"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/ts_x_regular"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/txt_end_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/time_place_holder"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/ts_xlarge"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/layout_no_data"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_trip_scheduled"
            android:textColor="@color/black"
            android:textSize="@dimen/ts_xlarge"
            android:textStyle="normal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tap_to_book_your_ride"
            android:textColor="@color/black"
            android:textSize="@dimen/ts_regular"
            android:textStyle="normal" />
    </LinearLayout>
</LinearLayout>