<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f5f5">

    <RelativeLayout
        android:id="@+id/top_layout"
        android:layout_width="match_parent"
        android:layout_height="90dp"

        android:layout_alignParentTop="true"
        android:background="@color/white"
        android:paddingStart="15dp"
        android:paddingEnd="0dp"

        >

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="20dp"
            android:layout_height="25dp"
            android:layout_marginTop="15dp"
            android:contentDescription="@string/back"
            android:src="@drawable/ic_left_arrow_back"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:text="@string/search_home_location"
            android:textColor="#242424"
            android:textSize="20sp" />
    </RelativeLayout>

    <android.support.v7.widget.CardView
        android:id="@+id/card_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/top_layout"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="-25dp"
        android:background="@color/blue500"
        app:cardCornerRadius="2dp"
        app:contentPadding="7dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/img_search"
                android:layout_marginStart="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/search"
                android:src="@drawable/search" />

            <EditText
                android:id="@+id/edt_search"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textColor="@color/black"
                android:background="@color/white"
                android:hint="@string/search_for_a_locality_or_landmark"
                android:inputType="textAutoComplete" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerViewResults"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/card_search"
        android:layout_margin="15dp"
        android:elevation="5dp"
        tools:targetApi="lollipop" />


</RelativeLayout>
