<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true">


    <LinearLayout
            android:layout_width="match_parent"
        android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:orientation="vertical"
            android:padding="10dp">

            <com.marlonmafra.android.widget.EditTextPassword
                android:id="@+id/edt_current_password"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/roboto_slab"
                android:hint="@string/current_password"
                android:inputType="textPassword"
                android:padding="5dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textColorLink="@color/black"
                android:textSize="20sp"
                app:hidePasswordIcon="@drawable/ic_hide_black"
                app:iconPosition="right"
                app:showPasswordIcon="@drawable/ic_view_black" />


            <com.marlonmafra.android.widget.EditTextPassword
                android:id="@+id/edt_new_password"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/roboto_slab"
                android:hint="@string/new_password"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textColorLink="@color/black"
                android:textSize="20sp"
                app:hidePasswordIcon="@drawable/ic_hide_black"
                app:iconPosition="right"
                app:showPasswordIcon="@drawable/ic_view_black" />


            <com.marlonmafra.android.widget.EditTextPassword
                android:id="@+id/edt_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/roboto_slab"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:padding="5dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textColorLink="@color/black"
                android:textSize="20sp"
                app:hidePasswordIcon="@drawable/ic_hide_black"
                app:iconPosition="right"
                app:showPasswordIcon="@drawable/ic_view_black" />

            <Button
                android:id="@+id/btn_submit"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@color/app_theme_red"
                android:fontFamily="@font/roboto_slab"
                android:text="@string/submit"
                android:textColor="@color/white" />
        </LinearLayout>
</ScrollView>