<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edt_society"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="Society"
            android:paddingStart="5dp"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/edt_street_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="Street Address"
            android:paddingStart="5dp"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/edt_locality"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="Locality"
            android:paddingStart="5dp"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/edt_landmark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/landmark"
            android:paddingStart="5dp"
            android:textSize="18sp" />

        <AutoCompleteTextView
            android:id="@+id/act_area"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/select_area"
            android:paddingStart="5dp"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txt_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:paddingStart="5dp"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txt_state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:paddingStart="5dp"
            android:text="@string/maharastra"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txt_pin_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:paddingStart="5dp"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/app_theme_red"
            android:text="@string/update"
            android:textColor="@color/white" />
    </LinearLayout>
</ScrollView>